# dbt-nyc-taxi

./: .gitignore  README.md  dbt_project.yml  exploration.py  package-lock.yml  packages.yml  pyproject.toml
macros/: generate_date_key.sql  generate_time_key.sql  timestamp_to_date_key.sql  timestamp_to_time_key.sql
models/: schema.yml  sources.yml  stg_dim_date.sql  stg_fct_yellow_trips.sql  stg_yellow_trips.sql
models/marts/: dim_date.sql  dim_minute.sql  marts__models.yml  yellow_trips.sql
models/staging/: _sources.yml  _staging__models.yml  staging__models.yml  stg_yellow_trips.sql
tests/: assert_fare_not_zero.sql  assert_higher_dropoff_time.sql
