[project]
name = "nyc-taxi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.7",
    "dbt-duckdb>=1.10.1",
    "dbt-snowflake>=1.11.3",
    "fastparquet>=2025.12.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
]
